# chatgpt-plugin

./: README.md  app.py  plugin.py  pyproject.toml  test_data.json
.well-known/: ai-plugin.json  al-plugin.json
static/: openapi.yaml
